Fix css of the dynamic menu so that it wraps after 3 div

--- a/frontend/css/modules/dynamic-menu.less
+++ b/frontend/css/modules/dynamic-menu.less
@@ -1,7 +1,8 @@
 .dynamic-menu {
   display: flex !important;
   align-items: center;
-  justify-content: space-around;
+  justify-content: flex-start;
+  flex-wrap: wrap;
   div {
     display: flex;
     align-items: center;
